--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "use-dark-mode": "^2.3.1"
   }
 }
