--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@rooks/use-window-size": "^4.11.2",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
@@ -22,6 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
+    "react-particle-image": "^1.0.2",
+    "rooks": "^7.14.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "use-dark-mode": "^2.3.1"
