--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@rooks/use-window-size": "^4.11.2",
+    "clsx": "^2.0.0",
+    "framer-motion": "^10.16.16",
     "i18next": "^23.7.8",
     "next": "13.4.5",
     "next-intl": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-i18next": "^13.5.0",
     "react-icons": "^4.9.0",
     "react-particle-image": "^1.0.2",
@@ -25,15 +28,15 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@next/bundle-analyzer": "^13.5.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@next/bundle-analyzer": "^13.5.6",
     "autoprefixer": "^10.0.1",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.4",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4"
+    "typescript": "^5"
   }
 }
