--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@rooks/use-window-size": "^4.11.2",
     "axios": "^1.6.2",
+    "bull": "^4.11.5",
     "clsx": "^2.0.0",
     "framer-motion": "^10.16.16",
     "i18next": "^23.7.8",
@@ -26,8 +27,10 @@
     "react-i18next": "^13.5.0",
     "react-icons": "^4.9.0",
     "react-particle-image": "^1.0.2",
+    "redis": "^4.6.11",
     "rooks": "^7.14.1",
-    "typescript": "5.1.3"
+    "typescript": "5.1.3",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.5.6",
@@ -35,6 +38,7 @@
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
